--- a/HelpingHand/Base.lproj/Main.storyboard
+++ b/HelpingHand/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gms-ib-Xiq">
                                                 <rect key="frame" x="0.0" y="28.5" width="335" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                             </textField>
                                         </subviews>
                                         <constraints>
@@ -91,8 +91,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g6l-B1-7na"/>
-                                                    <segue destination="VOU-In-7SR" kind="show" id="JO6-D7-eQx"/>
+                                                    <segue destination="VOU-In-7SR" kind="show" identifier="configuration" id="JO6-D7-eQx"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -148,10 +147,10 @@
             </objects>
             <point key="canvasLocation" x="-254" y="731"/>
         </scene>
-        <!--View Controller-->
+        <!--New User View Controller-->
         <scene sceneID="9gj-L0-HrV">
             <objects>
-                <viewController id="Ddx-Ow-XBA" customClass="ViewController" customModule="HelpingHand" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Ddx-Ow-XBA" customClass="NewUserViewController" customModule="HelpingHand" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DHb-qk-Ou4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -190,7 +189,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DlC-25-x9v">
                                         <rect key="frame" x="0.0" y="184.5" width="335" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                                 <constraints>
@@ -221,6 +220,9 @@
                                                 <integer key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="save:" destination="Ddx-Ow-XBA" eventType="touchUpInside" id="T8J-nQ-R8q"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -239,6 +241,11 @@
                         <viewLayoutGuide key="safeArea" id="RKn-lp-IMr"/>
                     </view>
                     <navigationItem key="navigationItem" id="25D-44-Ddv"/>
+                    <connections>
+                        <outlet property="email" destination="bNu-4B-Vnd" id="vye-Kw-5GR"/>
+                        <outlet property="name" destination="KLa-12-hnM" id="dKF-UA-7aX"/>
+                        <outlet property="password" destination="DlC-25-x9v" id="uli-8k-xTw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nLj-Ib-zbm" sceneMemberID="firstResponder"/>
             </objects>
@@ -247,7 +254,7 @@
         <!--Configuration View Controller-->
         <scene sceneID="oa1-XL-x9e">
             <objects>
-                <viewController id="VOU-In-7SR" customClass="ConfigurationViewController" customModule="HelpingHand" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="configuration" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VOU-In-7SR" customClass="ConfigurationViewController" customModule="HelpingHand" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rp7-81-NCG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -255,8 +262,8 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="39O-Lf-jpZ">
                                 <rect key="frame" x="20" y="212" width="335" height="140"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intervalo do aviso sonoro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAz-fd-YwD">
-                                        <rect key="frame" x="0.0" y="0.0" width="191" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAz-fd-YwD">
+                                        <rect key="frame" x="0.0" y="0.0" width="57.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -326,7 +333,7 @@
                     <navigationItem key="navigationItem" id="I1x-aH-UUP"/>
                     <connections>
                         <outlet property="distanceSensibility" destination="2AA-ah-s31" id="L4K-tb-tmx"/>
-                        <outlet property="soundInterval" destination="1oP-2R-acq" id="tZ1-uT-QjW"/>
+                        <outlet property="volume" destination="1oP-2R-acq" id="tZ1-uT-QjW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jLo-87-O0r" sceneMemberID="firstResponder"/>
